--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -44,7 +44,7 @@
             </p>
           </li>
         </ul>
-        <button class="about-btn" type="button">
+        <button class="about-btn" type="button" data-modal-readMe-open>
           Read more
           <svg class="about-icon">
             <use
