--- a/src/sass/utils/_reset.scss
+++ b/src/sass/utils/_reset.scss
@@ -35,3 +35,13 @@ p {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.is-scroll {
+  overflow: hidden;
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
