--- a/src/sass/layouts/_modal-products.scss
+++ b/src/sass/layouts/_modal-products.scss
@@ -6,14 +6,17 @@
   height: 100%;
   opacity: 1;
   transform: translate (100%);
+  visibility: visible;
+  z-index: 20;
 
-  background: rgba(227, 252, 5, 0.226);
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: rgba(227, 252, 5, 0.226);
+  transition: opacity 250ms linear, visibility 250ms linear;
 }
 .prod-backdrop.is-hidden {
+  visibility: hidden;
   opacity: 0;
   pointer-events: none;
+  transition: opacity 250ms linear, visibility 250ms linear;
 }
 
 .prod-backdrop.is-hidden .modal-prod {
