--- a/src/sass/layouts/_modal-readMe.scss
+++ b/src/sass/layouts/_modal-readMe.scss
@@ -1,20 +1,21 @@
 .readme__backdrop {
   position: fixed;
+  z-index: 20;
   top: 0;
   left: 0;
+  margin: auto;
   width: 100%;
   height: 100%;
-  opacity: 1;
-  transform: translate (100%);
 
-  background: rgba(227, 252, 5, 0.226);
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: rgba(227, 252, 5, 0.226);
+  transition: opacity 250ms linear, visibility 250ms linear;
 
   &.is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
+
+    transition: opacity 250ms linear, visibility 250ms linear;
   }
 }
 
@@ -31,9 +32,6 @@
   width: 570px;
 
   z-index: 20;
-
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-readme__btn--close {
