--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="page-header">
-  <div class="header-container container">
+  <div id="up-scroll" class="header-container container">
     <nav class="navigation">
       <div class="main-nav">
         <a href="./index.html" class="navigation__logo">
