--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,8 @@
 @import './layouts/contacts';
 @import './layouts/footer';
 
+@import './layouts/scroll-up';
+
 @import './layouts/modal-buy-now';
 
 @import './layouts/modal-products';
